--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-startinfo",
   "description": "Useful info when starting project",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Giorgio Modoni <modogio@gmail.com>",
   "homepage":"https://github.com/gimox/node-startinfo",
   "main": "./lib/main",
@@ -13,14 +13,9 @@
     "url": "https://github.com/gimox/node-startinfo/issues"
   },
   "dependencies": {
+    "simple-node-info":"0.0.x"
   },
   "devDependencies": {
-    "express": "*",
-    "morgan": "*",
-    "mocha": "*",
-    "request": "*",
-    "should": "*",
-    "describe": "*"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
