--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-startinfo",
   "description": "Useful info when starting project",
-  "version": "0.0.6",
+  "version": "2.0.0",
   "author": "Giorgio Modoni <modogio@gmail.com>",
-  "homepage":"https://github.com/gimox/node-startinfo",
-  "main": "./lib/main",
+  "homepage": "https://github.com/gimox/node-startinfo",
+  "main": "./build/main",
   "repository": {
     "type": "git",
     "url": "https://github.com/gimox/node-startinfo"
@@ -13,17 +13,40 @@
     "url": "https://github.com/gimox/node-startinfo/issues"
   },
   "dependencies": {
-    "simple-node-info":"0.0.x"
+    "@types/node": "^7.0.0",
+    "simple-node-info": "0.0.x"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/chai-http": "0.0.30",
+    "@types/mocha": "^2.2.40",
+    "@types/express": "^4.0.35",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "ts-node": "^3.0.2",
+    "tslint": "^4.3.1",
+    "typedoc": "^0.5.5",
+    "typescript": "^2.2.2",
+    "express": "^4.15.2"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "start": "npm run live",
+    "live": "$(npm bin)/nodemon --exec $(npm bin)/ts-node -- ./demo/server.ts",
+    "build": "rm -rf ./build && npm run lint && $(npm bin)/tsc -p tsconfig.json",
+    "lint": "$(npm bin)/tslint --config ./tslint.json ./demo/server.ts",
+    "doc": "$(npm bin)/typedoc --out ./doc ./src/json-routing.ts",
+    "build:release": "npm run build && npm run doc",
+    "test": " $(npm bin)/mocha --compilers $(npm bin)/ts:ts-node/register ./test.ts"
   },
   "keywords": [
     "startinfo",
     "info",
     "routes"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=6.9.1"
+  }
 }
