--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
   "devDependencies": {
     "@types/chai": "^3.4.35",
     "@types/chai-http": "0.0.30",
-    "@types/mocha": "^2.2.40",
     "@types/express": "^4.0.35",
+    "@types/mocha": "^2.2.40",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "coveralls": "^2.13.0",
+    "express": "^4.15.2",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
+    "nyc": "^10.2.0",
     "ts-node": "^3.0.2",
     "tslint": "^4.3.1",
     "typedoc": "^0.5.5",
-    "typescript": "^2.2.2",
-    "express": "^4.15.2"
+    "typescript": "^2.2.2"
   },
   "scripts": {
     "start": "npm run live",
@@ -38,7 +40,9 @@
     "lint": "$(npm bin)/tslint --config ./tslint.json ./demo/server.ts",
     "doc": "$(npm bin)/typedoc --out ./doc ./src/json-routing.ts",
     "build:release": "npm run build && npm run doc",
-    "test": " $(npm bin)/mocha --compilers $(npm bin)/ts:ts-node/register ./test.ts"
+    "test": "npm run test:coverage",
+    "test:coverage": "nyc  $(npm bin)/mocha --compilers $(npm bin)/ts:ts-node/register ./test.ts",
+    "test:coverage:coveralls": "nyc report --reporter=text-lcov | ./node_modules/coveralls/bin/coveralls.js"
   },
   "keywords": [
     "startinfo",
@@ -48,5 +52,42 @@
   "license": "MIT",
   "engines": {
     "node": ">=6.9.1"
+  },
+  "nyc": {
+    "lines": 50,
+    "statements": 50,
+    "functions": 50,
+    "branches": 50,
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "demo",
+      "test.ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "check-coverage": false,
+    "watermarks": {
+      "lines": [
+        80,
+        95
+      ],
+      "functions": [
+        80,
+        95
+      ],
+      "branches": [
+        80,
+        95
+      ],
+      "statements": [
+        80,
+        95
+      ]
+    }
   }
 }
